# api-bloxs

./: .env.example  .flake8  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml
api_bloxs/: app.py  settings.py
api_bloxs/base/: controller.py  database.py  error.py  model.py  repository.py  service.py
api_bloxs/controllers/: account.py  login.py  person.py
api_bloxs/infra/: database.py  environment.py  errors.py  sqlalchemy.py  trace.py
api_bloxs/middlewares/: auth.py
api_bloxs/modules/account/dto/: account.py  query.py
api_bloxs/modules/account/enum/: account_type.py
api_bloxs/modules/account/errors/: errors.py
api_bloxs/modules/account/mappers/: account_person.py  pagination.py
api_bloxs/modules/account/model/: account.py
api_bloxs/modules/account/repositories/: account.py
api_bloxs/modules/account/service/: account.py
api_bloxs/modules/account/services/: account.py
api_bloxs/modules/deposit/model/: deposit.py
api_bloxs/modules/person/dto/: person.py
api_bloxs/modules/person/errors/: errors.py
api_bloxs/modules/person/mappers/: person.py
api_bloxs/modules/person/model/: person.py
api_bloxs/modules/person/repositories/: person.py
api_bloxs/modules/person/services/: person.py
api_bloxs/modules/transaction/dto/: query.py  transaction.py
api_bloxs/modules/transaction/mappers/: pagination.py
api_bloxs/modules/transaction/model/: transaction.py
api_bloxs/modules/transaction/repositories/: transaction.py
api_bloxs/modules/transaction/services/: transaction.py
api_bloxs/modules/withdraw/dto/: withdraw.py
api_bloxs/routes/: account.py  login.py  person.py
api_bloxs/shared/: application.py  containers.py  core.py  environment.py  gateways.py  infra.py  repositories.py  services.py
migrations/versions/: 0a1e8f2d1f13_transaction.py  16269762b4c0_person_account.py  1a59032b7cb9_person.py  3a2d81fc3285_person.py  3c1a8b70ec5c_account.py  4fb0b47a4746_table_account.py  5c8d928723fc_account.py  73ce2034d663_transaction_account.py
