[tool.poetry]
name = "api-bloxs"
version = "0.1.0"
description = "Api Bloxs"
authors = ["Keven Lucas <k_l.s@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "3.6.0"
black = "23.12.0"
isort = "5.13.2"
flask-sqlalchemy = "3.1.1"
python-dotenv = "1.0.0"
dependency-injector = "4.41.0"
environs = "9.5.0"
apiflask = "2.0.2"
mysql-connector-python = "8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.hg
  | \.py_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
